[package]
name = "emoji-logger"
version = "0.1.0"
description = "pretty_env_logger but it has emojis and is probably quite a bit worse"
repository = "https://owo.codes/noxim/emoji-logger"
authors = ["Noxim <aaro.peramaa@gmail.com>"]
license = "MIT"
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
env_logger = "0.5"
log = "0.4"
ansi_term = "0.11"